# mgl

./: CMakeLists.txt
MGL/include/: glm_context.h  pixel_utils.h
MGL/src/: program.c  shaders.c
Unused/: glm_context.h
test_mgl/: CMakeLists.txt
